wxc/include/ewxw/wxc_glue.h

/* cbAntiflickerPlugin */
TClassDefExtend(cbAntiflickerPlugin,cbPluginBase)
TClass(cbAntiflickerPlugin) cbAntiflickerPlugin_Create( void* pPanel, int paneMask );
TClass(cbAntiflickerPlugin) cbAntiflickerPlugin_CreateDefault(  );
void       cbAntiflickerPlugin_Delete( TSelf(cbAntiflickerPlugin) _obj );
/* cbBarDragPlugin */
TClassDefExtend(cbBarDragPlugin,cbPluginBase)
TClass(cbBarDragPlugin) cbBarDragPlugin_Create( void* pPanel, int paneMask );
TClass(cbBarDragPlugin) cbBarDragPlugin_CreateDefault(  );
void       cbBarDragPlugin_Delete( TSelf(cbBarDragPlugin) _obj );
/* cbBarHintsPlugin */
TClassDefExtend(cbBarHintsPlugin,cbPluginBase)
TClass(cbBarHintsPlugin) cbBarHintsPlugin_Create( void* pPanel, int paneMask );
TClass(cbBarHintsPlugin) cbBarHintsPlugin_CreateDefault(  );
void       cbBarHintsPlugin_Delete( TSelf(cbBarHintsPlugin) _obj );
void       cbBarHintsPlugin_SetGrooveCount( TSelf(cbBarHintsPlugin) _obj, int nGrooves );
/* cbCustomizeBarEvent */
TClassDefExtend(cbCustomizeBarEvent,cbPluginEvent)
void*      cbCustomizeBarEvent_Bar( TSelf(cbCustomizeBarEvent) _obj );
void       cbCustomizeBarEvent_ClickPos( TSelf(cbCustomizeBarEvent) _obj, TPointOutVoid(_x,_y) );
/* cbCustomizeLayoutEvent */
TClassDefExtend(cbCustomizeLayoutEvent,cbPluginEvent)
void       cbCustomizeLayoutEvent_ClickPos( TSelf(cbCustomizeLayoutEvent) _obj, TPointOutVoid(_x,_y) );
/* cbDockPane */
TClassDefExtend(cbDockPane,wxObject)
int        cbDockPane_BarPresent( TSelf(cbDockPane) _obj, void* pBar );
int        cbDockPane_GetAlignment( TSelf(cbDockPane) _obj );
void*      cbDockPane_GetBarInfoByWindow( TSelf(cbDockPane) _obj, void* pBarWnd );
void       cbDockPane_GetBarResizeRange( TSelf(cbDockPane) _obj, void* pBar, void* from, void* till, int forLeftHandle );
int        cbDockPane_GetDockingState( TSelf(cbDockPane) _obj );
void*      cbDockPane_GetFirstRow( TSelf(cbDockPane) _obj );
int        cbDockPane_GetPaneHeight( TSelf(cbDockPane) _obj );
void       cbDockPane_GetRealRect( TSelf(cbDockPane) _obj, TRectOutVoid(_x,_y,_w,_h) );
int        cbDockPane_GetRowList( TSelf(cbDockPane) _obj, void* _ref );
void       cbDockPane_GetRowResizeRange( TSelf(cbDockPane) _obj, void* pRow, void* from, void* till, int forUpperHandle );
int        cbDockPane_HitTestPaneItems( TSelf(cbDockPane) _obj, TPoint(x,y), void* ppRow, void* ppBar );
void       cbDockPane_InsertBarByCoord( TSelf(cbDockPane) _obj, void* pBar, TRect(x,y,w,h) );
void       cbDockPane_InsertBarByInfo( TSelf(cbDockPane) _obj, void* pBarInfo );
void       cbDockPane_InsertBarToRow( TSelf(cbDockPane) _obj, void* pBar, void* pIntoRow );
void       cbDockPane_InsertRow( TSelf(cbDockPane) _obj, void* pRow, void* pBeforeRow );
TBool      cbDockPane_IsHorizontal( TSelf(cbDockPane) _obj );
int        cbDockPane_MatchesMask( TSelf(cbDockPane) _obj, int paneMask );
void       cbDockPane_RemoveRow( TSelf(cbDockPane) _obj, void* pRow );
void       cbDockPane_SetBoundsInParent( TSelf(cbDockPane) _obj, TRect(x,y,w,h));
void       cbDockPane_SetPaneWidth( TSelf(cbDockPane) _obj, int width );
/* cbDrawBarDecorEvent */
TClassDefExtend(cbDrawBarDecorEvent,cbPluginEvent)
void*      cbDrawBarDecorEvent_Bar( TSelf(cbDrawBarDecorEvent) _obj );
void       cbDrawBarDecorEvent_BoundsInParent( TSelf(cbDrawBarDecorEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
void*      cbDrawBarDecorEvent_Dc( TSelf(cbDrawBarDecorEvent) _obj );
/* cbDrawBarHandlesEvent */
TClassDefExtend(cbDrawBarHandlesEvent,cbPluginEvent)
void*      cbDrawBarHandlesEvent_Bar( TSelf(cbDrawBarHandlesEvent) _obj );
void*      cbDrawBarHandlesEvent_Dc( TSelf(cbDrawBarHandlesEvent) _obj );
/* cbDrawHintRectEvent */
TClassDefExtend(cbDrawHintRectEvent,cbPluginEvent)
int        cbDrawHintRectEvent_EraseRect( TSelf(cbDrawHintRectEvent) _obj );
TBool      cbDrawHintRectEvent_IsInClient( TSelf(cbDrawHintRectEvent) _obj );
int        cbDrawHintRectEvent_LastTime( TSelf(cbDrawHintRectEvent) _obj );
void       cbDrawHintRectEvent_Rect( TSelf(cbDrawHintRectEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
/* cbDrawPaneBkGroundEvent */
TClassDefExtend(cbDrawPaneBkGroundEvent,cbPluginEvent)
void*      cbDrawPaneBkGroundEvent_Dc( TSelf(cbDrawPaneBkGroundEvent) _obj );
/* cbDrawPaneDecorEvent */
TClassDefExtend(cbDrawPaneDecorEvent,cbPluginEvent)
void*      cbDrawPaneDecorEvent_Dc( TSelf(cbDrawPaneDecorEvent) _obj );
/* cbDrawRowBkGroundEvent */
TClassDefExtend(cbDrawRowBkGroundEvent,cbPluginEvent)
void*      cbDrawRowBkGroundEvent_Dc( TSelf(cbDrawRowBkGroundEvent) _obj );
void*      cbDrawRowBkGroundEvent_Row( TSelf(cbDrawRowBkGroundEvent) _obj );
/* cbDrawRowDecorEvent */
TClassDefExtend(cbDrawRowDecorEvent,cbPluginEvent)
void*      cbDrawRowDecorEvent_Dc( TSelf(cbDrawRowDecorEvent) _obj );
void*      cbDrawRowDecorEvent_Row( TSelf(cbDrawRowDecorEvent) _obj );
/* cbDrawRowHandlesEvent */
TClassDefExtend(cbDrawRowHandlesEvent,cbPluginEvent)
void*      cbDrawRowHandlesEvent_Dc( TSelf(cbDrawRowHandlesEvent) _obj );
void*      cbDrawRowHandlesEvent_Row( TSelf(cbDrawRowHandlesEvent) _obj );
/* cbFinishDrawInAreaEvent */
TClassDefExtend(cbFinishDrawInAreaEvent,cbPluginEvent)
void       cbFinishDrawInAreaEvent_Area( TSelf(cbFinishDrawInAreaEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
/* cbInsertBarEvent */
TClassDefExtend(cbInsertBarEvent,cbPluginEvent)
void*      cbInsertBarEvent_Bar( TSelf(cbInsertBarEvent) _obj );
void*      cbInsertBarEvent_Row( TSelf(cbInsertBarEvent) _obj );
/* cbLayoutRowEvent */
TClassDefExtend(cbLayoutRowEvent,cbPluginEvent)
void*      cbLayoutRowEvent_Row( TSelf(cbLayoutRowEvent) _obj );
/* cbLeftDClickEvent */
TClassDefExtend(cbLeftDClickEvent,cbPluginEvent)
void       cbLeftDClickEvent_Pos( TSelf(cbLeftDClickEvent) _obj, TPointOutVoid(_x,_y) );
/* cbLeftDownEvent */
TClassDefExtend(cbLeftDownEvent,cbPluginEvent)
void       cbLeftDownEvent_Pos( TSelf(cbLeftDownEvent) _obj, TPointOutVoid(_x,_y) );
/* cbLeftUpEvent */
TClassDefExtend(cbLeftUpEvent,cbPluginEvent)
void       cbLeftUpEvent_Pos( TSelf(cbLeftUpEvent) _obj, TPointOutVoid(_x,_y) );
/* cbMotionEvent */
TClassDefExtend(cbMotionEvent,cbPluginEvent)
void       cbMotionEvent_Pos( TSelf(cbMotionEvent) _obj, TPointOutVoid(_x,_y) );
/* cbPluginBase */
TClassDefExtend(cbPluginBase,wxEvtHandler)
void       cbPluginBase_Delete( TSelf(cbPluginBase) _obj );
int        cbPluginBase_GetPaneMask( TSelf(cbPluginBase) _obj );
TBool      cbPluginBase_IsReady( TSelf(cbPluginBase) _obj );
int        cbPluginBase_ProcessEvent( TSelf(cbPluginBase) _obj, TClass(wxEvent) event );
/* cbPluginEvent */
TClassDefExtend(cbPluginEvent,wxEvent)
void*      cbPluginEvent_Pane( TSelf(cbPluginEvent) _obj );
/* cbRemoveBarEvent */
TClassDefExtend(cbRemoveBarEvent,cbPluginEvent)
void*      cbRemoveBarEvent_Bar( TSelf(cbRemoveBarEvent) _obj );
/* cbResizeBarEvent */
TClassDefExtend(cbResizeBarEvent,cbPluginEvent)
void*      cbResizeBarEvent_Bar( TSelf(cbResizeBarEvent) _obj );
void*      cbResizeBarEvent_Row( TSelf(cbResizeBarEvent) _obj );
/* cbResizeRowEvent */
TClassDefExtend(cbResizeRowEvent,cbPluginEvent)
int        cbResizeRowEvent_ForUpperHandle( TSelf(cbResizeRowEvent) _obj );
int        cbResizeRowEvent_HandleOfs( TSelf(cbResizeRowEvent) _obj );
void*      cbResizeRowEvent_Row( TSelf(cbResizeRowEvent) _obj );
/* cbRightDownEvent */
TClassDefExtend(cbRightDownEvent,cbPluginEvent)
void       cbRightDownEvent_Pos( TSelf(cbRightDownEvent) _obj, TPointOutVoid(_x,_y) );
/* cbRightUpEvent */
TClassDefExtend(cbRightUpEvent,cbPluginEvent)
void       cbRightUpEvent_Pos( TSelf(cbRightUpEvent) _obj, TPointOutVoid(_x,_y) );
/* cbSimpleCustomizationPlugin */
TClassDefExtend(cbSimpleCustomizationPlugin,cbPluginBase)
TClass(cbSimpleCustomizationPlugin) cbSimpleCustomizationPlugin_Create( void* pPanel, int paneMask );
TClass(cbSimpleCustomizationPlugin) cbSimpleCustomizationPlugin_CreateDefault(  );
void       cbSimpleCustomizationPlugin_Delete( TSelf(cbSimpleCustomizationPlugin) _obj );
/* cbSimpleUpdatesMgr */
TClassDefExtend(cbSimpleUpdatesMgr,cbUpdatesManagerBase)

/* cbSizeBarWndEvent */
TClassDefExtend(cbSizeBarWndEvent,cbPluginEvent)
void*      cbSizeBarWndEvent_Bar( TSelf(cbSizeBarWndEvent) _obj );
void       cbSizeBarWndEvent_BoundsInParent( TSelf(cbSizeBarWndEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
/* cbStartBarDraggingEvent */
TClassDefExtend(cbStartBarDraggingEvent,cbPluginEvent)
void*      cbStartBarDraggingEvent_Bar( TSelf(cbStartBarDraggingEvent) _obj );
void       cbStartBarDraggingEvent_Pos( TSelf(cbStartBarDraggingEvent) _obj, TPointOutVoid(_x,_y) );
/* cbStartDrawInAreaEvent */
TClassDefExtend(cbStartDrawInAreaEvent,cbPluginEvent)
void       cbStartDrawInAreaEvent_Area( TSelf(cbStartDrawInAreaEvent) _obj, TRectOutVoid(_x,_y,_w,_h) );
/* wxDynToolInfo */
TClassDefExtend(wxDynToolInfo,wxToolLayoutItem)
int        wxDynToolInfo_Index( TSelf(wxDynToolInfo) _obj );
void       wxDynToolInfo_RealSize( TSelf(wxDynToolInfo) _obj, TSizeOutVoid(_w,_h) );
void*      wxDynToolInfo_pToolWnd( TSelf(wxDynToolInfo) _obj );
/* wxDynamicToolBar */
TClassDefExtend(wxDynamicToolBar,wxToolBarBase)
void       wxDynamicToolBar_AddSeparator( TSelf(wxDynamicToolBar) _obj, void* pSepartorWnd );
void       wxDynamicToolBar_AddTool( TSelf(wxDynamicToolBar) _obj, int toolIndex, void* pToolWindow, TSize(w,h) );
void*      wxDynamicToolBar_AddToolBitmap( TSelf(wxDynamicToolBar) _obj, int toolIndex, TClass(wxBitmap) bitmap, void* pushedBitmap, int toggle, TPoint(x,y), TClass(wxClientData) clientData, void* helpString1, void* helpString2 );
void       wxDynamicToolBar_AddToolImage( TSelf(wxDynamicToolBar) _obj, int toolIndex, void* imageFileName, int imageFileType, void* labelText, int alignTextRight, TBool isFlat );
void       wxDynamicToolBar_AddToolLabel( TSelf(wxDynamicToolBar) _obj, int toolIndex, void* labelBmp, void* labelText, int alignTextRight, TBool isFlat );
TClass(wxDynamicToolBar) wxDynamicToolBar_Create( TClass(wxWindow) parent, int id, TRect(x,y,w,h), int style, int orientation, int RowsOrColumns );
TClass(wxDynamicToolBar) wxDynamicToolBar_CreateDefault(  );
void*      wxDynamicToolBar_CreateDefaultLayout( TSelf(wxDynamicToolBar) _obj );
int        wxDynamicToolBar_CreateParams( TSelf(wxDynamicToolBar) _obj, TClass(wxWindow) parent, int id, TRect(x,y,w,h), int style, int orientation, int RowsOrColumns );
void       wxDynamicToolBar_Delete( TSelf(wxDynamicToolBar) _obj );
int        wxDynamicToolBar_DoDeleteTool( TSelf(wxDynamicToolBar) _obj, int pos, void* tool );
int        wxDynamicToolBar_DoInsertTool( TSelf(wxDynamicToolBar) _obj, int pos, void* tool );
void       wxDynamicToolBar_DrawSeparator( TSelf(wxDynamicToolBar) _obj, void* info, TClass(wxDC) dc );
void       wxDynamicToolBar_EnableTool( TSelf(wxDynamicToolBar) _obj, int toolIndex, TBool enable );
void*      wxDynamicToolBar_FindToolForPosition( TSelf(wxDynamicToolBar) _obj, TPoint(x,y) );
void       wxDynamicToolBar_GetPreferredDim( TSelf(wxDynamicToolBar) _obj, int gw, int gh, void* pw, void* ph );
void*      wxDynamicToolBar_GetToolInfo( TSelf(wxDynamicToolBar) _obj, int toolIndex );
int        wxDynamicToolBar_Layout( TSelf(wxDynamicToolBar) _obj );
void       wxDynamicToolBar_RemoveTool( TSelf(wxDynamicToolBar) _obj, int toolIndex );
void       wxDynamicToolBar_SetLayout( TSelf(wxDynamicToolBar) _obj, void* pLayout );
/* wxToolBarBase */
TClassDefExtend(wxToolBarBase,wxControl)

/* wxToolLayoutItem */
TClassDefExtend(wxToolLayoutItem,wxObject)
TBool      wxToolLayoutItem_IsSeparator( TSelf(wxToolLayoutItem) _obj );
void       wxToolLayoutItem_Rect( TSelf(wxToolLayoutItem) _obj, TRectOutVoid(_x,_y,_w,_h) );