wxcl/src/layout/cffi/wxFL.lisp


(defcfun ("cbDockPane_InsertBarByCoord" cbDockPane_InsertBarByCoord) :void
  (_obj :pointer)
  (pBar :pointer)
  (x :int)
  (y :int)
  (w :int)
  (h :int))

(defcfun ("cbDockPane_InsertBarToRow" cbDockPane_InsertBarToRow) :void
  (_obj :pointer)
  (pBar :pointer)
  (pIntoRow :pointer))

(defcfun ("cbDockPane_InsertBarByInfo" cbDockPane_InsertBarByInfo) :void
  (_obj :pointer)
  (pBarInfo :pointer))

(defcfun ("cbDockPane_RemoveRow" cbDockPane_RemoveRow) :void
  (_obj :pointer)
  (pRow :pointer))

(defcfun ("cbDockPane_InsertRow" cbDockPane_InsertRow) :void
  (_obj :pointer)
  (pRow :pointer)
  (pBeforeRow :pointer))

(defcfun ("cbDockPane_SetPaneWidth" cbDockPane_SetPaneWidth) :void
  (_obj :pointer)
  (width :int))

(defcfun ("cbDockPane_SetBoundsInParent" cbDockPane_SetBoundsInParent) :void
  (_obj :pointer)
  (_x :int)
  (_y :int)
  (_w :int)
  (_h :int))

(defcfun ("cbDockPane_GetRealRect" cbDockPane_GetRealRect) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbDockPane_GetRowList" cbDockPane_GetRowList) :int
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("cbDockPane_GetFirstRow" cbDockPane_GetFirstRow) :pointer
  (_obj :pointer))

(defcfun ("cbDockPane_BarPresent" cbDockPane_BarPresent) :int
  (_obj :pointer)
  (pBar :pointer))

(defcfun ("cbDockPane_GetPaneHeight" cbDockPane_GetPaneHeight) :int
  (_obj :pointer))

(defcfun ("cbDockPane_GetAlignment" cbDockPane_GetAlignment) :int
  (_obj :pointer))

(defcfun ("cbDockPane_MatchesMask" cbDockPane_MatchesMask) :int
  (_obj :pointer)
  (paneMask :int))

(defcfun ("cbDockPane_IsHorizontal" cbDockPane_IsHorizontal) :int
  (_obj :pointer))

(defcfun ("cbDockPane_GetDockingState" cbDockPane_GetDockingState) :int
  (_obj :pointer))

(defcfun ("cbDockPane_HitTestPaneItems" cbDockPane_HitTestPaneItems) :int
  (_obj :pointer)
  (x :int)
  (y :int)
  (ppRow :pointer)
  (ppBar :pointer))

(defcfun ("cbDockPane_GetBarResizeRange" cbDockPane_GetBarResizeRange) :void
  (_obj :pointer)
  (pBar :pointer)
  (from :pointer)
  (till :pointer)
  (forLeftHandle :int))

(defcfun ("cbDockPane_GetRowResizeRange" cbDockPane_GetRowResizeRange) :void
  (_obj :pointer)
  (pRow :pointer)
  (from :pointer)
  (till :pointer)
  (forUpperHandle :int))

(defcfun ("cbDockPane_GetBarInfoByWindow" cbDockPane_GetBarInfoByWindow) :pointer
  (_obj :pointer)
  (pBarWnd :pointer))

(defcfun ("cbPluginBase_GetPaneMask" cbPluginBase_GetPaneMask) :int
  (_obj :pointer))

(defcfun ("cbPluginBase_Delete" cbPluginBase_Delete) :void
  (_obj :pointer))

(defcfun ("cbPluginBase_IsReady" cbPluginBase_IsReady) :int
  (_obj :pointer))

(defcfun ("cbPluginBase_ProcessEvent" cbPluginBase_ProcessEvent) :int
  (_obj :pointer)
  (event :pointer))

(defcfun ("cbPluginEvent_Pane" cbPluginEvent_Pane) :pointer
  (_obj :pointer))

(defcfun ("cbLeftDownEvent_Pos" cbLeftDownEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbLeftUpEvent_Pos" cbLeftUpEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbRightDownEvent_Pos" cbRightDownEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbRightUpEvent_Pos" cbRightUpEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbMotionEvent_Pos" cbMotionEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbLeftDClickEvent_Pos" cbLeftDClickEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbLayoutRowEvent_Row" cbLayoutRowEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbResizeRowEvent_Row" cbResizeRowEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbResizeRowEvent_HandleOfs" cbResizeRowEvent_HandleOfs) :int
  (_obj :pointer))

(defcfun ("cbResizeRowEvent_ForUpperHandle" cbResizeRowEvent_ForUpperHandle) :int
  (_obj :pointer))

(defcfun ("cbInsertBarEvent_Bar" cbInsertBarEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbInsertBarEvent_Row" cbInsertBarEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbResizeBarEvent_Bar" cbResizeBarEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbResizeBarEvent_Row" cbResizeBarEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbRemoveBarEvent_Bar" cbRemoveBarEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbSizeBarWndEvent_Bar" cbSizeBarWndEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbSizeBarWndEvent_BoundsInParent" cbSizeBarWndEvent_BoundsInParent) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbDrawBarDecorEvent_Bar" cbDrawBarDecorEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbDrawBarDecorEvent_BoundsInParent" cbDrawBarDecorEvent_BoundsInParent) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbDrawBarDecorEvent_Dc" cbDrawBarDecorEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbDrawRowDecorEvent_Row" cbDrawRowDecorEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbDrawRowDecorEvent_Dc" cbDrawRowDecorEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbDrawPaneDecorEvent_Dc" cbDrawPaneDecorEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbDrawBarHandlesEvent_Bar" cbDrawBarHandlesEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbDrawBarHandlesEvent_Dc" cbDrawBarHandlesEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbDrawRowHandlesEvent_Row" cbDrawRowHandlesEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbDrawRowHandlesEvent_Dc" cbDrawRowHandlesEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbDrawRowBkGroundEvent_Row" cbDrawRowBkGroundEvent_Row) :pointer
  (_obj :pointer))

(defcfun ("cbDrawRowBkGroundEvent_Dc" cbDrawRowBkGroundEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbDrawPaneBkGroundEvent_Dc" cbDrawPaneBkGroundEvent_Dc) :pointer
  (_obj :pointer))

(defcfun ("cbStartBarDraggingEvent_Bar" cbStartBarDraggingEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbStartBarDraggingEvent_Pos" cbStartBarDraggingEvent_Pos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbDrawHintRectEvent_Rect" cbDrawHintRectEvent_Rect) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbDrawHintRectEvent_LastTime" cbDrawHintRectEvent_LastTime) :int
  (_obj :pointer))

(defcfun ("cbDrawHintRectEvent_EraseRect" cbDrawHintRectEvent_EraseRect) :int
  (_obj :pointer))

(defcfun ("cbDrawHintRectEvent_IsInClient" cbDrawHintRectEvent_IsInClient) :int
  (_obj :pointer))

(defcfun ("cbStartDrawInAreaEvent_Area" cbStartDrawInAreaEvent_Area) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbFinishDrawInAreaEvent_Area" cbFinishDrawInAreaEvent_Area) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("cbCustomizeBarEvent_ClickPos" cbCustomizeBarEvent_ClickPos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbCustomizeBarEvent_Bar" cbCustomizeBarEvent_Bar) :pointer
  (_obj :pointer))

(defcfun ("cbCustomizeLayoutEvent_ClickPos" cbCustomizeLayoutEvent_ClickPos) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer))

(defcfun ("cbAntiflickerPlugin_CreateDefault" cbAntiflickerPlugin_CreateDefault) :pointer)

(defcfun ("cbAntiflickerPlugin_Create" cbAntiflickerPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbAntiflickerPlugin_Delete" cbAntiflickerPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("cbBarDragPlugin_CreateDefault" cbBarDragPlugin_CreateDefault) :pointer)

(defcfun ("cbBarDragPlugin_Create" cbBarDragPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbBarDragPlugin_Delete" cbBarDragPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("cbBarHintsPlugin_CreateDefault" cbBarHintsPlugin_CreateDefault) :pointer)

(defcfun ("cbBarHintsPlugin_Create" cbBarHintsPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbBarHintsPlugin_Delete" cbBarHintsPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("cbBarHintsPlugin_SetGrooveCount" cbBarHintsPlugin_SetGrooveCount) :void
  (_obj :pointer)
  (nGrooves :int))

(defcfun ("cbSimpleCustomizationPlugin_CreateDefault" cbSimpleCustomizationPlugin_CreateDefault) :pointer)

(defcfun ("cbSimpleCustomizationPlugin_Create" cbSimpleCustomizationPlugin_Create) :pointer
  (pPanel :pointer)
  (paneMask :int))

(defcfun ("cbSimpleCustomizationPlugin_Delete" cbSimpleCustomizationPlugin_Delete) :void
  (_obj :pointer))

(defcfun ("wxToolLayoutItem_IsSeparator" wxToolLayoutItem_IsSeparator) :int
  (_obj :pointer))

(defcfun ("wxToolLayoutItem_Rect" wxToolLayoutItem_Rect) :void
  (_obj :pointer)
  (_x :pointer)
  (_y :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("wxDynToolInfo_pToolWnd" wxDynToolInfo_pToolWnd) :pointer
  (_obj :pointer))

(defcfun ("wxDynToolInfo_Index" wxDynToolInfo_Index) :int
  (_obj :pointer))

(defcfun ("wxDynToolInfo_RealSize" wxDynToolInfo_RealSize) :void
  (_obj :pointer)
  (_w :pointer)
  (_h :pointer))

(defcfun ("wxDynamicToolBar_CreateDefault" wxDynamicToolBar_CreateDefault) :pointer)

(defcfun ("wxDynamicToolBar_Create" wxDynamicToolBar_Create) :pointer
  (parent :pointer)
  (id :int)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (style :int)
  (orientation :int)
  (RowsOrColumns :int))

(defcfun ("wxDynamicToolBar_Delete" wxDynamicToolBar_Delete) :void
  (_obj :pointer))

(defcfun ("wxDynamicToolBar_CreateParams" wxDynamicToolBar_CreateParams) :int
  (_obj :pointer)
  (parent :pointer)
  (id :int)
  (x :int)
  (y :int)
  (w :int)
  (h :int)
  (style :int)
  (orientation :int)
  (RowsOrColumns :int))

(defcfun ("wxDynamicToolBar_AddTool" wxDynamicToolBar_AddTool) :void
  (_obj :pointer)
  (toolIndex :int)
  (pToolWindow :pointer)
  (w :int)
  (h :int))

(defcfun ("wxDynamicToolBar_AddToolImage" wxDynamicToolBar_AddToolImage) :void
  (_obj :pointer)
  (toolIndex :int)
  (imageFileName :pointer)
  (imageFileType :int)
  (labelText :pointer)
  (alignTextRight :int)
  (isFlat :int))

(defcfun ("wxDynamicToolBar_AddToolLabel" wxDynamicToolBar_AddToolLabel) :void
  (_obj :pointer)
  (toolIndex :int)
  (labelBmp :pointer)
  (labelText :pointer)
  (alignTextRight :int)
  (isFlat :int))

(defcfun ("wxDynamicToolBar_AddToolBitmap" wxDynamicToolBar_AddToolBitmap) :pointer
  (_obj :pointer)
  (toolIndex :int)
  (bitmap :pointer)
  (pushedBitmap :pointer)
  (toggle :int)
  (x :int)
  (y :int)
  (clientData :pointer)
  (helpString1 :pointer)
  (helpString2 :pointer))

(defcfun ("wxDynamicToolBar_AddSeparator" wxDynamicToolBar_AddSeparator) :void
  (_obj :pointer)
  (pSepartorWnd :pointer))

(defcfun ("wxDynamicToolBar_GetToolInfo" wxDynamicToolBar_GetToolInfo) :pointer
  (_obj :pointer)
  (toolIndex :int))

(defcfun ("wxDynamicToolBar_RemoveTool" wxDynamicToolBar_RemoveTool) :void
  (_obj :pointer)
  (toolIndex :int))

(defcfun ("wxDynamicToolBar_DrawSeparator" wxDynamicToolBar_DrawSeparator) :void
  (_obj :pointer)
  (info :pointer)
  (dc :pointer))

(defcfun ("wxDynamicToolBar_Layout" wxDynamicToolBar_Layout) :int
  (_obj :pointer))

(defcfun ("wxDynamicToolBar_GetPreferredDim" wxDynamicToolBar_GetPreferredDim) :void
  (_obj :pointer)
  (gw :int)
  (gh :int)
  (pw :pointer)
  (ph :pointer))

(defcfun ("wxDynamicToolBar_CreateDefaultLayout" wxDynamicToolBar_CreateDefaultLayout) :pointer
  (_obj :pointer))

(defcfun ("wxDynamicToolBar_SetLayout" wxDynamicToolBar_SetLayout) :void
  (_obj :pointer)
  (pLayout :pointer))

(defcfun ("wxDynamicToolBar_EnableTool" wxDynamicToolBar_EnableTool) :void
  (_obj :pointer)
  (toolIndex :int)
  (enable :int))

(defcfun ("wxDynamicToolBar_FindToolForPosition" wxDynamicToolBar_FindToolForPosition) :pointer
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("wxDynamicToolBar_DoInsertTool" wxDynamicToolBar_DoInsertTool) :int
  (_obj :pointer)
  (pos :int)
  (tool :pointer))

(defcfun ("wxDynamicToolBar_DoDeleteTool" wxDynamicToolBar_DoDeleteTool) :int
  (_obj :pointer)
  (pos :int)
  (tool :pointer))
